--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lekgau Shuttles & Travel Services</title>
-  <link rel="stylesheet" href="unity.css" />
-  <script type="lebzaagain.js"></script>
+  <link rel="stylesheet" href="lekgau.css" />
+  <script type="lekgautrans.js"></script>
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <style>
     form { max-width: 400px; margin: auto; display: flex; flex-direction: column; gap: 10px; }
