--- a/index.html
+++ b/index.html
@@ -28,10 +28,35 @@
     <p>Providing you with safe and secure transport to your destination.</p>
   </section>
 
-  <section id="privacy-policy">
-    <h3>Privacy Policy</h3>
-    <p>We are committed to protecting your personal information...</p>
-  </section>
+ <section id="terms-of-use">
+  <h3>Terms of Use</h3>
+  <p>
+    By accessing or using Lekgau Shuttles & Travel Services, you agree to the following terms:
+  </p>
+  <ul>
+    <li>Our services are intended for safe and legal transportation only.</li>
+    <li>Quotes are subject to change based on availability and location.</li>
+    <li>All bookings must be confirmed in advance and may require a deposit.</li>
+    <li>Late cancellations may incur fees.</li>
+    <li>Any misuse or unlawful activity will result in service refusal.</li>
+  </ul>
+  <p>
+    Lekgau Shuttles reserves the right to modify these terms at any time without notice.
+  </p>
+</section>
+<section id="privacy-policy">
+  <h3>Privacy Policy</h3>
+  <p>
+    We are committed to protecting your personal information. Any data we collect (such as your name, phone number, and email) will be used only for booking and communication purposes.
+  </p>
+  <ul>
+    <li>We do not share your information with third parties without your consent.</li>
+    <li>All submitted data is stored securely and only accessible by authorized staff.</li>
+    <li>You may request to delete your data at any time by contacting us.</li>
+  </ul>
+  <p>
+    By using our services, you agree to the terms of this privacy policy.
+  </p>
 
   <form id="quote-form">
     <input type="text" name="name" id="name" placeholder="Full Name" required />
