--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section class="hero">
-    <img src="C:\Users\ICT_User21.ATS-HO\Desktop\Personal\lebza\newattempt\image_jpeg (1).jpg" width="150" height="50" alt="Lekgau Shuttle Van" />
+    <img src="C:\Users\ICT_User21.ATS-HO\Desktop\Personal\lebza\newattempt\image_jpeg (1).jpg" width="150" height="50" alt="Lekgau Shuttle picture" />
   </section>
 
   <section class="content">
@@ -31,7 +31,7 @@
  <section id="terms-of-use">
   <h3>Terms of Use</h3>
   <p>
-    By accessing or using Lekgau Shuttles & Travel Services, you agree to the following terms:
+    By accessing or using <b>Lekgau Shuttles & Travel Services</b>, you agree to the following terms:
   </p>
   <ul>
     <li>Our services are intended for safe and legal transportation only.</li>
