--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       WhatsApp Us <strong>0640107069</strong>
     </a>
     <p>📞 064 010 7069 | 064 010 7069 | 064 010 7069<br />
-      📧 <a href="mokgohloail897@gmail.com">mokgohloail897@gmail.com</a> |
-      <a href="mailto:unityrebelogile@gmail.com">unityrebelogile@gmail.com</a>
+      📧 <a href="mailo:mokgohloail897@gmail.com">mokgohloail897@gmail.com</a> |
+      <a href="unityrebelogile@gmail.com">unityrebelogile@gmail.com</a>
     </p>
   </section>
 
@@ -82,7 +82,7 @@
   </footer>
 
   <script>
-    emailjs.init('9njx40oBNkogm9Nvz'); // Replace with your real public key
+    emailjs.init('9njx40oBNkogm9Nvz'); 
 
     document.getElementById("quote-form").addEventListener("submit", function (e) {
       e.preventDefault();
