--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       WhatsApp Us <strong>0640107069</strong>
     </a>
     <p>📞 064 010 7069 | 064 010 7069 | 064 010 7069<br />
-      📧 <a href="mailo:mokgohloail897@gmail.com">mokgohloail897@gmail.com</a> |
+      📧 <a href="mailto:mokgohloail897@gmail.com">mokgohloail897@gmail.com</a> |
       <a href="unityrebelogile@gmail.com">unityrebelogile@gmail.com</a>
     </p>
   </section>
