--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <section class="contact">
     <h3>Contact Us</h3>
-    <a href="https://wa.me/0640107069" class="whatsapp" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/+27640107069" class="whatsapp" target="_blank" rel="noopener noreferrer">
       WhatsApp Us <strong>0640107069</strong>
     </a>
     <p>📞 064 010 7069 | 064 010 7069 | 064 010 7069<br />
