--- a/index.html
+++ b/index.html
@@ -106,5 +106,11 @@
         });
     });
   </script>
+  
+  <button onclick="toggleSection()">Show/Hide Section</button>
+
+  <div id="hiddenSection">
+    <p>This is the hidden section that appears when you click the button.</p>
+  </div>
 </body>
 </html>
