--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
       <a href="unityrebelogile@gmail.com">unityrebelogile@gmail.com</a>
     </p>
   </section>
+  
+  <button onclick="toggleSection()">Banking Details</button>
+
+  <div id="hiddenSection">
+    <p>banking details will be added here.</p>
+  </div>
 
   <footer>
     &copy; 2025 Lekgau Shuttles. All rights reserved.
@@ -106,11 +112,5 @@
         });
     });
   </script>
-  
-  <button onclick="toggleSection()">Show/Hide Section</button>
-
-  <div id="hiddenSection">
-    <p>This is the hidden section that appears when you click the button.</p>
-  </div>
 </body>
 </html>
